@@ -21,6 +21,7 @@ import(ggplot2)
 importFrom(dendextend,color_branches)
 importFrom(dendextend,find_k)
 importFrom(dendextend,is.dendrogram)
+importFrom(dendextend,is.hclust)
 importFrom(dendextend,rotate)
 importFrom(dendextend,seriate_dendrogram)
 importFrom(dendextend,set)
