@@ -4,6 +4,9 @@ heatmaply 0.8.0 (2017-01-22)
 ### NEW FEATURES
 * heatmaply -
       * file parameter - allows to save a heatmaply plot as an HTML file.
+      * Allow Rowv/Colv to also work for hclust (by turning them into a dendrogram).
+
+
 
 ### BUG FIXES
 * heatmaply -
